# htmx-story-book

./: ARCHITECTURE.md  ARCHITECTURE_INTERVIEW.md  Cargo.toml  HTMX.md  README.md
src/: main.rs
src/components/: mod.rs
src/components/login/: logged_in.hbs  login.hbs  mod.rs
src/data/: sample_data.rs
src/handlers/: book_handlers.rs  mod.rs
src/models/: book.rs  mod.rs  user.rs
src/pages/: layout.hbs  logged_in.hbs  login.hbs  mod.rs
src/pages/book/: book_page.hbs  mod.rs
src/pages/index/: logged_in_content.hbs  mod.rs
src/services/: auth_service.rs  book_service.rs  mod.rs
static/: style.css
templates/: book_page.hbs  index.hbs  index.mustache  logged_in.hbs  login.hbs  signature.mustache
templates/pages/: logged_in_content.hbs  non_logged_in_content.hbs
