[package]
name = "mustachestory"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
handlebars = "6.3.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5.0", features = ["fs"] }
jsonwebtoken = "9.2.0"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.10"
